# arch-studio

./: .dockerignore  .env-example  .gitignore  best-practices.md  demo-deploy.md  docker-compose.yml  intentiv-prd-v3.md
backend/: .dockerignore  .env-e  .env.example  ADK_LOCAL.md  Dockerfile  main.py  pyproject.toml
backend/app/: config.py
backend/app/agents/: _keys.py  architect_agent.py  pipeline.py  refiner.py  router_agent.py  runner.py  validator_agent.py
backend/app/agents/.adk/: session.db
backend/app/exporters/: drawio.py  mermaid_export.py
backend/app/models/: schemas.py
backend/app/routers/: export.py  generate.py  refine.py
backend/intentiv_pipeline_agent/: agent.py
backend/intentiv_pipeline_agent/.adk/: session.db
backend/intentiv_refiner_agent/: agent.py
backend/intentiv_refiner_agent/.adk/: session.db
backend/tests/: test_routes.py  test_validator.py
deploy/agent-engine/: deploy.py
deploy/cloud-run/: cloudbuild-backend.yaml  cloudbuild-frontend.yaml  deploy-backend.sh  deploy-frontend.sh  iam-setup.sh
frontend/: Dockerfile  Dockerfile.prebuilt  package-lock.json  package.json  tailwind.config.ts
frontend/app/: layout.tsx  page.tsx
frontend/components/phase1/: RefinedSpecEditor.tsx  RoughInputPanel.tsx
frontend/components/results/: DiagramCanvas.tsx  ExportMenu.tsx  NodeInspector.tsx  PatternBadge.tsx  ResultsLayout.tsx  StatRow.tsx
frontend/components/shared/: TopBar.tsx  (+1 more)
frontend/lib/: api.ts  tierConfig.ts  types.ts
frontend/store/: useArchStore.ts
frontend/styles/: globals.css
samples/: agent.py  agent_api.py
